# mdcs

./: README.md  build_docs.sh  conf.py  index.rst  requirements.in  requirements.txt  roadmap.rst
docs/: .gitignore
pkg/: Cargo.toml
pkg/mdcs/: Cargo.toml
pkg/mdcs/src/: device.rs  lib.rs
pkg/mdcs/src/avro/: time.rs
pkg/mdcs/src/device/: action.rs  attribute.rs  device.rs  error.rs
pkg/mdcs_node/: Cargo.toml  index.rst
pkg/mdcs_node/src/: config.rs  device.rs  lib.rs  main.rs  node.rs  plugin.avpr  plugin.rs
pkg/mdcs_node/src/node/: config.rs
pkg/mdcs_node/src/plugin/: config.rs  instance.rs  process.rs  request.avsc  request.rs  response.avsc  response.rs  server.rs
pkg/mdcs_node_host/: .gitignore  Cargo.toml  MANIFEST.in  Makefile  setup.py
pkg/mdcs_node_host/mdcs_node_host/: avro.py  console.py  device.py  plugin.avpr
pkg/mdcs_node_host/requirements/: common.txt  development.txt
pkg/mdcs_node_host/src/: lib.rs  linux.rs  macos.rs  main.rs
schema/: node-plugin.avpr  node.avpr
