[package]
name = "mdcs_node_host"
version = "0.1.0"
authors = ["Alexandru Barbur <alex@ctrlc.name>"]
edition = "2018"

[dependencies]
mdcs = { path = "../mdcs" }
mdcs_node = { path = "../mdcs_node" }
serde = { version = "1.0", features = ["derive"] }
# avro-rs = "0.6"
avro-rs = { git = "https://github.com/CtrlC-Root/avro-rs", branch = "dev" }

[target.'cfg(target_os="linux")'.dependencies]
sensors = "0.2.1"
